[gd_scene load_steps=4 format=2]

[ext_resource path="res://nodes/arrow/Arrow.gd" type="Script" id=1]
[ext_resource path="res://nodes/arrow/Arrow.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 4.97324, 9.25702 )

[node name="Arrow" type="Area2D"]

position = Vector2( -1, 0 )
rotation = 0.785398
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Transform" ]

[node name="Sprite" type="Sprite" parent="." index="0"]

position = Vector2( 1, 0 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
offset = Vector2( 0, 1.5 )
_sections_unfolded = [ "Animation", "Offset", "Region", "Transform", "Z Index" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

position = Vector2( 30, 0 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="." index="2"]

position = Vector2( 6.71414, 0 )
rect = Rect2( -40, -10, 68, 20 )
_sections_unfolded = [ "Transform" ]

[node name="FadeTween" type="Tween" parent="." index="3"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[connection signal="body_entered" from="." to="." method="_on_Arrow_body_entered"]

[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]

[connection signal="tween_completed" from="FadeTween" to="." method="_on_FadeTween_tween_completed"]


